Fiix deployment on IBM Cloud

--- a/ibm/Makefile
+++ b/ibm/Makefile
@@ -2,35 +2,35 @@
 
 
 build:
-	env GOOS=linux GO111MODULES=on go build -v -a -ldflags="-s -w" -o bin/put functions/put.go
-	env GOOS=linux GO111MODULES=on go build -v -a -ldflags="-s -w" -o bin/get functions/get.go
-	env GOOS=linux GO111MODULES=on go build -v -a -ldflags="-s -w" -o bin/del functions/delete.go
-	env GOOS=linux GO111MODULES=on go build -v -a -ldflags="-s -w" -o bin/lst functions/list.go
-	env GOOS=linux GO111MODULES=on go build -v -a -ldflags="-s -w" -o bin/done functions/done.go
+	env GOOS=linux CGO_ENABLED=0 GOARCH=amd64 GO111MODULES=on go build -v -a -o bin/put/exec functions/put.go
+	env GOOS=linux CGO_ENABLED=0 GOARCH=amd64 GO111MODULES=on go build -v -a -o bin/get/exec functions/get.go
+	env GOOS=linux CGO_ENABLED=0 GOARCH=amd64 GO111MODULES=on go build -v -a -o bin/del/exec functions/delete.go
+	env GOOS=linux CGO_ENABLED=0 GOARCH=amd64 GO111MODULES=on go build -v -a -o bin/lst/exec functions/list.go
+	env GOOS=linux CGO_ENABLED=0 GOARCH=amd64 GO111MODULES=on go build -v -a -o bin/done/exec functions/done.go
 
 package: build
-	cd bin && cp put exec && zip put.zip exec && rm exec
-	cd bin && cp get exec && zip get.zip exec && rm exec
-	cd bin && cp del exec && zip del.zip exec && rm exec
-	cd bin && cp lst exec && zip lst.zip exec && rm exec
-	cd bin && cp done exec && zip done.zip exec && rm exec
+	cd bin/put  && zip exec.zip exec
+	cd bin/get  && zip exec.zip exec
+	cd bin/del  && zip exec.zip exec
+	cd bin/lst  && zip exec.zip exec
+	cd bin/done && zip exec.zip exec
 
 clean:
 	rm -rvf ./bin
 
 deploy: clean package
-	ibmcloud fn action create todo-put --native bin/put.zip
-	ibmcloud fn action create todo-get --native bin/get.zip
-	ibmcloud fn action create todo-del --native bin/del.zip
-	ibmcloud fn action create todo-lst --native bin/lst.zip
-	ibmcloud fn action create todo-done --native bin/done.zip
+	cd bin/put && ibmcloud fn action create todo-put --native exec.zip
+	cd bin/get && ibmcloud fn action create todo-get --native exec.zip
+	cd bin/del && ibmcloud fn action create todo-del --native exec.zip
+	cd bin/lst && ibmcloud fn action create todo-lst --native exec.zip
+	cd bin/done && ibmcloud fn action create todo-done --native exec.zip
 
 update: clean package
-	ibmcloud fn action update todo-put --native bin/put.zip
-	ibmcloud fn action update todo-get --native bin/get.zip
-	ibmcloud fn action update todo-del --native bin/del.zip
-	ibmcloud fn action update todo-lst --native bin/lst.zip
-	ibmcloud fn action update todo-done --native bin/done.zip
+	cd bin/put && ibmcloud fn action update todo-put --native exec.zip
+	cd bin/get && ibmcloud fn action update todo-get --native exec.zip
+	cd bin/del && ibmcloud fn action update todo-del --native exec.zip
+	cd bin/lst && ibmcloud fn action update todo-lst --native exec.zip
+	cd bin/done && ibmcloud fn action update todo-done --native exec.zip
 
 destroy:
 	ibmcloud fn action delete todo-put
